deleted styles and added

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <html>
     <body style="background-color:red;">
-        <h1>welcome to static web application</h1>
+        <h1 color="red">welcome to static web application</h1>
+        <h2>page header comes here</h2>
         <font color="00FF00"</font>
         
     </body>
